# ML5_deeplearning

./: ML5CNN.ipynb  ML5_Transfer Learning.ipynb  ML5_keras_J1.ipynb  ML5_perceptron_J1.ipynb  main.py  pyproject.toml
correction/: ML5_CNN_J2_CORR.ipynb  ML5_method_J1_CORR.ipynb
